--- a/project.config.json
+++ b/project.config.json
@@ -14,7 +14,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.3.0",
-	"appid": "wx38b99f8ca2791595",
+	"appid": "wx8bca0368435d296b",
 	"projectname": "vmall",
 	"debugOptions": {
 		"hidedInDevtools": []
